# tonality

./: .gitignore  PRIVACY-POLICY.adoc  README.adoc  build.gradle  gradle.properties
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/net/thomasphillips/octone/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/octone/app/: AboutOctoneActivity.kt  OctoneApplication.kt  OctoneMainActivity.kt  OctonePianoView.kt  PianoControlScale.kt  PopupSizingMenu.kt
app/src/main/java/net/currit/tonality/: AboutOctoneActivity.kt  AboutTonalityActivity.kt  OctoneApplication.kt  OctoneMainActivity.kt  PianoControlScale.kt  TonalityApplication.java  TonalityApplication.kt  TonalityMainActivity.java  TonalityMainActivity.kt  TonalityPianoView.kt
app/src/main/res/layout/: activity_about_octone.xml  activity_octone_main.xml  activity_tonality_main.xml  fragment_piano_control_scale.xml  popup_scale.xml  popup_sizing.xml
app/src/main/res/layout-land/: activity_octone_main.xml  activity_tonality_main.xml
app/src/main/res/menu/: menu_main.xml  octone_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/test/java/net/thomasphillips/octone/: ExampleUnitTest.java
orchid-plugin/: CMakeLists.iOS.txt  CMakeLists.txt  README.md  build_all.sh
orchid-plugin/Source/: OrchidAudioProcessor.cpp  OrchidAudioProcessor.h  OrchidAudioProcessorEditor.cpp  OrchidAudioProcessorEditor.h
semitone/: CMakeLists.txt  build.gradle
semitone/src/main/: AndroidManifest.xml
semitone/src/main/cpp/: Sound.cpp
